adding ignore on log and downloads

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ packer_cache
 *.qcow2
 *_VARS.fd
 *_CODE.fd
+windows/http/downloads/*
+windows/build_logs/*
 ubuntu/packages/*.deb
 ubuntu/packages/*.bin
 ubuntu/packages/*.tar.gz
